--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Norimitsu-Shimizu/udemy-typescript-for-javascript-development/issues"
   },
-  "homepage": "https://github.com/Norimitsu-Shimizu/udemy-typescript-for-javascript-development#readme"
+  "homepage": "https://github.com/Norimitsu-Shimizu/udemy-typescript-for-javascript-development#readme",
+  "devDependencies": {
+    "typescript": "^3.7.5"
+  }
 }
